# Surfacing-Community-Leadership-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5a4fdb5228c8_create_access_tokens_table.py  7c52bd870d32_seed_starter_interests.py  9a3f7c2b1e04_add_osm_ref_to_communities.py  a396a374f3fc_create_core_schema.py  ad446b5fe6df_create_users_table.py  b7e2c1a9d045_add_event_tag.py  c3f1a8b6d922_create_notifications.py  d9c4e2f7a103_add_external_ref_to_events.py  e5b8d3c1f460_create_import_areas.py  f2a6b9d4e781_notification_deleted_type.py  f5577b81b7f0_baseline.py
backend/app/: main.py
backend/app/admin/: __init__.py
backend/app/core/: admin.py  area_import.py  auth.py  config.py  database.py  geo.py  notifications.py  rate_limit.py  security.py
backend/app/models/: __init__.py  access_token.py  block.py  community.py  connection.py  event.py  import_area.py  interest.py  message.py  notification.py  participant.py  profile.py  report.py  user.py
backend/app/routers/: auth.py  blocks.py  communities.py  connections.py  deps.py  events.py  geocode.py  interests.py  messages.py  notifications.py  participants.py  profiles.py  reports.py  users.py
backend/app/schemas/: auth.py  block.py  community.py  connection.py  event.py  geocode.py  interest.py  message.py  profile.py  (+3 more)
backend/scripts/: import_common.py  import_ics.py  import_nyc_open_data.py  import_ticketmaster.py  make_admin.py  seed_demo.py  seed_prod.py  smoke_test.sh
backend/tests/: conftest.py  test_area_import.py  test_auth.py  test_connections.py  test_events.py  test_import.py  test_import_civic.py  test_notifications.py  test_social.py
(+73 files in other folders)
