[project]
name = "ours-backend"
version = "0.1.0"
description = "Backend API for Ours — neighbors helping neighbors, in person."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=14.0",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
]

[tool.setuptools]
packages = ["app"]
