[project]
name = "ours-backend"
version = "0.1.0"
description = "Backend API for Ours — neighbors helping neighbors, in person."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=14.0",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
    "sqladmin>=0.20",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
